--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
+    "ethers": "^6.4.0",
     "lucide-react": "^0.221.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
